Scrollbar Style Fixed

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -39,6 +39,15 @@ li {
   list-style: none;
 }
 
+html::-webkit-scrollbar {
+  width: 0.5rem;
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: var(--heading-color);
+}
+
 .container {
   max-width: 960px;
   margin: auto;
